samples/_failures_safe/1761245490_b00690_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a50ba2ef.c: In function ‘main’:
./samples/SAFE/__tmp_a50ba2ef.c:150:28: error: missing terminating " character
  150 |                     printf("Error: Matrices must have same dimensions for addition.\n
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a50ba2ef.c:150:21: error: expected expression at end of input
  150 |                     printf("Error: Matrices must have same dimensions for addition.\n
      |                     ^~~~~~
./samples/SAFE/__tmp_a50ba2ef.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a50ba2ef.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a50ba2ef.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a50ba2ef.c:150:21: error: expected declaration or statement at end of input
